Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.0.0-rc1
-
Fix Version/s: Qt Creator 3.0.0-rc1
-
Component/s: QML Profiler
-
Labels:
-
Commits:9e0175d8bb9b532ab83353d2c38b5fd09a013fd3 761fd1198d9c98e25c1fd591bf49518a30c712c0 9a1da15739f09c423ee9eb3fde944cb90d4ef612
Description
The 'zoom' slider in the Qml Profiler does not show up.
[15:32:37] <kakoehne> gusletta: The main view of QmlProfiler is nowadays a QQuickView. There's another QWidget, which is technically a sibling (parent() is the same as the qquickview->parent(). We try to show it on top of the QQuickView. However, it doesn't show up for me, even after calling ->raise(). I'm just wondering whether that is an expected limiation (I have a faint of a memory that we don't support rendering of QWidget on top of a QOpenGLWidget on Mac, but that's LInux).
[15:34:46] <gusletta> \li Stacking order; The embedded window will stack on top of the
[15:34:46] <gusletta> widget hierarchy as an opaque box. The stacking order of multiple
[15:34:46] <gusletta> overlapping window container instances is undefined.
[15:34:58] <gusletta> kakoehne: from the QWindowContainer docs --^
[15:35:32] <gusletta> kakoehne: you can get the widget on top of the QWindow by reparenting it to the window though
[15:37:42] <kakoehne> gusletta: Okay, let me try that
[15:38:01] <gusletta> that "should" work
[15:39:44] <gusletta> kakoehne: you need to reparent the windows though, not the widgets. And currently this will not work on mac because mac doesn't support raise() for subwindows